--- a/css/base.css
+++ b/css/base.css
@@ -1,9 +1,8 @@
-/* .pixelify-sans:
-    font-family: "Pixelify Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: <weight>;
+/* .press-start-2p-regular {
+    font-family: "Press Start 2P", system-ui;
+    font-weight: 400;
     font-style: normal;
- */
+  } */
 
 
 * {
@@ -22,13 +21,13 @@
 }
 
 header {
-    position: absolute;
+    /* position: ;
     top: 0px;
     left: 50%;
-    transform: translate(-50%);
+    transform: translate(-50%); */
     width: 100%;
     height: 100px;
-    width: 80rem;
+    max-width: 80rem;
     margin: 0 auto;
     background-color: rgba(0, 0, 0, 0.675);
     border-radius: 0 0 20px 20px;
@@ -52,10 +51,101 @@ header {
         background: rgb(3, 92, 246);
 
         font-size: 30px;
-        font-family: "Pixelify Sans", sans-serif;
+        font-family: "Press Start 2P", system-ui;
         text-decoration: none;
         text-align: center;
     }
 }
 
-main {}
+main {
+    width: 100%;
+    max-width: 80rem;
+    margin: 0 auto;
+
+    display: flex;
+    flex-direction: column;
+
+    gap: 5rem;
+
+    padding: 3rem 0;
+    font-family: "Press Start 2P", system-ui;
+    position: relative;
+
+    h2 {
+        font-size: 160px;
+        margin: 30px;
+        color: rgb(48, 48, 48);
+
+    }
+
+    .region-container {
+        position: relative;
+
+        width: 100%;
+        height: 300px;
+
+        background-color: rgba(183, 125, 0, 0.6);
+        border: 7px dashed black;
+        border-radius: 20px;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: flex-start;
+
+    }
+
+    #johto {
+        justify-content: flex-end;
+        align-items: flex-start;
+    }
+
+    img {
+        width: 100%;
+        position: absolute;
+    }
+
+    .charizard {
+        right: 50px;
+        top: -86px;
+        max-width: 480px;
+    }
+
+    .feraligatr {
+        left: 50px;
+        top: -60px;
+        max-width: 420px;
+    }
+
+    .sceptile {
+        right: 50px;
+        top: -60px;
+        max-width: 430px;
+
+    }
+
+    a {
+        position: absolute;
+        bottom: 20px;
+        right: 200px;
+
+        background-image: linear-gradient(rgb(6, 42, 225), rgb(0, 102, 170));
+        color: white;
+
+        border: 2px solid white;
+        border-radius: 8px;
+
+        width: 300px;
+        height: 60px;
+
+        text-decoration: none;
+
+        display: grid;
+        place-items: center;
+
+    }
+
+    .left {
+        left: 200px;
+    }
+}
