--- a/css/base.css
+++ b/css/base.css
@@ -21,57 +21,29 @@
 
     font-family: "Press Start 2P", system-ui;
     min-height: 95vh;
-    overflow-y: hidden;
 
 }
 
-header {
-    position: ;
-    top: 0px;
-    left: 50%;
-    transform: translate(-50%);
+#homepage-header {
     width: 100%;
-    height: 20px;
-    text-align: center;
-    padding: 20px;
-    max-width: 80rem;
-    margin: 0 auto;
-    background-color: rgba(0, 0, 0, 0.675);
-    border-radius: 0 0 20px 20px;
-    padding-top: 1.5rem;
+    margin: 10px 0;
 
-    /* nav {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        place-items: center;
-
-    }
-
-    a {
-        width: 300px;
-        height: 50px;
-        border: 2px solid rgb(218, 203, 0);
-        border-radius: 8px;
-
-
-        color: white;
-        background: rgb(3, 92, 246);
-
-        font-size: 30px;
-        font-family: "Press Start 2P", system-ui;
-        text-decoration: none;
+    h1 {
         text-align: center;
-    } */
+        background-color: rgba(0, 0, 0, 0.458);
+        color: white;
+    }
 }
 
 main {
     width: 100%;
     max-width: 75rem;
+    min-height: 90vh;
     margin: 0 auto;
 
     display: flex;
     flex-direction: column;
-    gap: 5rem;
+    gap: 4rem;
 
     padding: 2rem 0;
     font-family: "Press Start 2P", system-ui;
@@ -79,7 +51,6 @@ main {
 
     h2 {
         font-size: clamp(3.12rem, 10vw + 0.2rem, 8.12rem);
-        /* font-size: 50px; */
         color: rgb(48, 48, 48);
         width: 100%;
 
@@ -93,7 +64,6 @@ main {
     #johto {
         text-align: right;
     }
-
 
     .region-container {
         position: relative;
