--- a/css/base.css
+++ b/css/base.css
@@ -12,17 +12,28 @@
 }
 
 #index-body {
-    background-image: url(../assets/home-of-celebi.png);
-    background-position: center;
+    /* background-image: url(../assets/home-of-celebi.png); */
+    /* background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: fixed; */
     position: relative;
 
     font-family: "Press Start 2P", system-ui;
     min-height: 95vh;
 
 }
+
+#index-body {
+    width: 100%;
+    height: 100vh;
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    transition: background-image 1.2s ease-in-out;
+}
+
 
 #homepage-header {
     width: 100%;
