--- a/css/base.css
+++ b/css/base.css
@@ -12,28 +12,23 @@
 }
 
 #index-body {
-    /* background-image: url(../assets/home-of-celebi.png); */
-    /* background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed; */
     position: relative;
-
-    font-family: "Press Start 2P", system-ui;
-    min-height: 95vh;
-
-}
-
-#index-body {
     width: 100%;
-    height: 100vh;
+    height: 95vh;
+
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    transition: background-image 1.2s ease-in-out;
-}
 
+    -o-transition: background-image 1.2s ease-in-out;
+    -ms-transform: background-image 1.2s ease-in-out;
+    -moz-transition: background-image 1.2s ease-in-out;
+    -webkit-transition: background-image 1.2s ease-in-out;
+    transition: background-image 1.2s ease-in-out;
+    font-family: "Press Start 2P", system-ui;
+
+}
 
 #homepage-header {
     width: 100%;
