--- a/gen-iv/sinnoh.css
+++ b/gen-iv/sinnoh.css
@@ -1,11 +1,22 @@
+.image-wrapper {
+
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
 .pokecard {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 1rem;
-    max-width: 400px;
-    max-height: auto;
+    width: 100%;
+    height: 400px;
 
     color: black;
+
+    img {
+        width: 100%;
+        max-width: 200px;
+    }
 }
 
 main {
