tom's work so far

--- a/css/modal-nav.css
+++ b/css/modal-nav.css
@@ -14,15 +14,18 @@ header {
     padding-top: 1.5rem;
 
     #modal-nav {
-        max-width: 50rem;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
         place-items: center;
 
     }
 
     a {
-        width: 300px;
+
+        display: grid;
+        place-items: center;
+        width: 250px;
         height: 50px;
         border: 2px solid rgb(218, 203, 0);
         border-radius: 8px;
@@ -30,10 +33,9 @@ header {
         color: white;
         background: rgb(3, 92, 246);
 
-        font-size: 30px;
+        font-size: 24px;
         font-family: "Press Start 2P", system-ui;
         text-decoration: none;
-        text-align: center;
     }
 }
 
