--- a/gen-iv/sinnoh.css
+++ b/gen-iv/sinnoh.css
@@ -1,26 +1,217 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    width: 100%;
+    height: auto;
+    background-image: url(../assets/home-of-celebi-night.png);
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+
+}
+
+main {
+    width: 100%;
+    max-width: 1400px;
+    height: auto;
+    /* background-color: red; */
+    margin: 0 auto;
+    margin-top: 6.5rem;
+    font-family: "Press Start 2P", system-ui;
+
+    @media (max-width: 1500px) {
+        width: 92.5%;
+    }
+}
+
 .image-wrapper {
 
     display: grid;
     grid-template-columns: repeat(5, 1fr);
 }
 
-.pokecard {
+.card-content {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.card-content img {
+    width: 80%;
+    /* Adjust as needed */
+    max-width: 200px;
+}
+
+
+/***************************************
+////////// Trainer.html css
+*/
+
+#trainer-info {
     width: 100%;
-    height: 400px;
+    min-height: 80vh;
+    max-height: fit-content;
+    background: rgba(46, 46, 46, 0.448);
 
-    color: black;
+    position: relative;
 
-    img {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+
+    border: 4px solid black;
+    border-radius: 8px;
+    padding: 2rem;
+    padding-bottom: 0;
+
+
+    >div {
+        align-self: start;
+
+        width: 800px;
+        height: 100%;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 2rem;
+
+    }
+
+
+
+    #pokemon-trainer {
+        display: grid;
+        place-items: center;
+        row-gap: 3rem;
+    }
+
+    #trainer-name {
+        text-decoration: underline;
+        line-height: 1.4;
+        border-bottom: 3px solid white;
+        color: white;
+    }
+
+    .trainer-tom {
+        max-width: 1000px;
+        z-index: 99;
+    }
+
+
+
+    #id-of-pokemon {
+        color: white;
+        text-transform: capitalize;
+
+    }
+
+    .active-pokemon {
         width: 100%;
-        max-width: 200px;
+        height: auto;
+        position: relative;
+        display: grid;
+        place-items: center;
+    }
+
+    #active-pokemon {
+        width: 70%;
+        height: auto;
+    }
+
+
+    .pokeball-wrapper {
+        align-self: flex-end;
+
+        max-width: 400px;
+        position: relative;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-end;
+    }
+
+    .decorative {
+        position: absolute;
+        top: -6px;
+
+        transform: scale(1.04);
+
+        height: 50px;
+        width: 100%;
+        background: linear-gradient(84deg, rgba(195, 255, 6, 1) 0%, rgba(255, 0, 0, 0.6386204139859069) 50%, rgba(0, 219, 255, 1) 100%);
+        clip-path: polygon(100% 0, 100% 10%, 2% 10%, 2% 45%, 0 55%, 0 0);
+    }
+
+    .decorative-reverse {
+        position: absolute;
+        top: 6px;
+
+        transform: rotate(180deg) scale(1.04);
+
+        height: 50px;
+        width: 100%;
+        background: linear-gradient(267deg, rgba(195, 255, 6, 1) 0%, rgba(255, 0, 0, 0.6386204139859069) 50%, rgba(0, 219, 255, 1) 100%);
+        clip-path: polygon(100% 0, 100% 10%, 2% 10%, 2% 45%, 0 55%, 0 0);
+    }
+
+    .selected {
+        filter: brightness(40%);
+    }
+
+}
+
+.pokeball {
+    cursor: pointer;
+    max-width: 50px;
+}
+
+@keyframes shake {
+    0% {
+        transform: rotate(0);
+    }
+
+    25% {
+        transform: rotate(-5deg);
+    }
+
+    50% {
+        transform: rotate(5deg);
+    }
+
+    75% {
+        transform: rotate(-3deg);
+    }
+
+    100% {
+        transform: rotate(0);
     }
 }
 
-main {
-    min-height: 95vh;
-    margin-top: 6.5rem;
-    background-color: red;
+.pokeball:hover {
+    animation: shake 1.2s ease-in-out infinite;
+    transform-origin: bottom center;
+}
+
+.moveset-wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+    border: 5px double white;
+    color: white;
+
+    p {
+        padding: 1rem;
+        border: 1px dashed white;
+
+    }
 }
